mengupload program baru

--- a/portofolio.html
+++ b/portofolio.html
@@ -11,6 +11,8 @@
     <title>my portofolio</title>
   </head>
   <body>
+    <div class="background"></div>
+    <img src="portofolio.png" alt="my picture">
     <nav>
       <div class="logo">
         <h2>agus salim</h2>
